# projekty

abstrakcja/: CMakeLists.txt  figure.cpp  figure.h  figureFunction.cpp  figureFunction.h  ishape.h  main.cpp  rectangle.cpp  rectangle.h  rightTriangle.cpp  rightTriangle.h  square.cpp  square.h
dziedziczenie/: CMakeLists.txt  Car.cpp  Car.h  ICarriage.h  Motocycle.cpp  Motorcycle.h  Truck.cpp  Truck.h  Vehicle.cpp  Vehicle.h  main.cpp
finalProject-obiektowka/: CMakeLists.txt  circle.h  circle.tpp  figure.cpp  figure.h  figureFunction.h  main.cpp  rectangle.cpp  rightTriangle.cpp  rightTriangle.h
finalproject_obiektowka/: CMakeLists.txt  circle.h  figure.h  ishape.h  main.cpp  rectangle.cpp  rectangle.h  righttriangle.cpp
hermetyzacja/: CMakeLists.txt  adminAccount.cpp  adminAccount.h  main.cpp  userAccount.cpp  userAccount.h
polimorfizm/: CMakeLists.txt  animal.cpp  animal.h  bird.cpp  bird.h  dog.cpp  dog.h  fish.cpp  fish.h  icreature.h  main.cpp
